added unit tests and changed and added new tests to the curl script